11.13 Adicionando suporte à paginação
